--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,14 @@ async-timeout==3.0.1
 attrs==21.4.0
 chardet==4.0.0
 discord.py==1.7.3
+dj-database-url==0.5.0
 Django==4.0.4
+django-heroku==0.3.1
 idna==3.3
 multidict==6.0.2
+psycopg2==2.9.3
 sqlparse==0.4.2
 typing_extensions==4.2.0
 tzdata==2022.1
+whitenoise==6.1.0
 yarl==1.7.2
