--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ discord.py==1.7.3
 dj-database-url==0.5.0
 Django==4.0.4
 django-heroku==0.3.1
+gunicorn==20.1.0
 idna==3.3
 multidict==6.0.2
 psycopg2==2.9.3
