--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ aiohttp==3.7.4.post0
 asgiref==3.5.2
 async-timeout==3.0.1
 attrs==21.4.0
+certifi==2022.5.18.1
 chardet==4.0.0
+charset-normalizer==2.0.12
 discord.py==1.7.3
 dj-database-url==0.5.0
 Django==4.0.4
@@ -11,8 +13,10 @@ gunicorn==20.1.0
 idna==3.3
 multidict==6.0.2
 psycopg2==2.9.3
+requests==2.27.1
 sqlparse==0.4.2
 typing_extensions==4.2.0
 tzdata==2022.1
+urllib3==1.26.9
 whitenoise==6.1.0
 yarl==1.7.2
