--- a/requirements.txt
+++ b/requirements.txt
@@ -12,12 +12,14 @@ dj-database-url==0.5.0
 Django==4.0.4
 django-cloudinary-storage==0.3.0
 django-heroku==0.3.1
+djangorestframework==3.13.1
 gunicorn==20.1.0
 idna==3.3
 multidict==6.0.2
 Pillow==9.1.1
 psycopg2==2.9.3
 pycodestyle==2.8.0
+pytz==2022.1
 requests==2.27.1
 six==1.16.0
 sqlparse==0.4.2
